Updating to Java 17 (Records), using Spring WebClient

--- a/invoiceService/src/main/resources/application.yml
+++ b/invoiceService/src/main/resources/application.yml
@@ -17,6 +17,9 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
 
+  codec:
+    max-in-memory-size: 10MB
+
   # Kafka Config
   kafka:
     bootstrap-servers: localhost:9092
